Fix DataTables cosmetics

--- a/app/Resources/public/less/etraxis-datatables.less
+++ b/app/Resources/public/less/etraxis-datatables.less
@@ -43,31 +43,37 @@ table.dataTable {
         }
     }
 
-    tbody tr {
-        background-color: #fbfbfb;
+    tbody, tfoot {
+        tr {
+            background-color: #fbfbfb;
+        }
     }
 
     &.row-border {
-        tbody tr td {
-            border-top: none;
-            border-bottom: 1px solid #ddd;
+        tbody, tfoot {
+            tr td {
+                border-top: none;
+                border-bottom: 1px solid #ddd;
+            }
         }
     }
 
     &.cell-border {
-        tbody tr td {
-            border-top: none;
-            border-bottom: 1px solid #ddd;
-            border-left: 1px solid #ddd;
-            border-right: none;
-        }
+        tbody, tfoot {
+            tr td {
+                border-top: none;
+                border-bottom: 1px solid #ddd;
+                border-left: 1px solid #ddd;
+                border-right: none;
 
-        tbody tr td:first-child {
-            border-left: 1px solid #ddd;
-        }
+                &:first-child {
+                    border-left: 1px solid #ddd;
+                }
 
-        tbody tr td:last-child {
-            border-right: 1px solid #ddd;
+                &:last-child {
+                    border-right: 1px solid #ddd;
+                }
+            }
         }
     }
 
