--- a/app/Resources/views/admin/users/tab_details.html.twig
+++ b/app/Resources/views/admin/users/tab_details.html.twig
@@ -29,10 +29,10 @@
             {{ macro.row('user.email'|trans, user.email) }}
             {{ macro.row('description'|trans, user.description) }}
             {{ macro.row('permissions'|trans, user.admin ? 'role.administrator'|trans|lower : 'role.user'|trans|lower) }}
-            {% if user.accountNonLocked %}
-                {{ macro.row('user.status'|trans, user.disabled ? 'user.disabled'|trans|lower : 'user.enabled'|trans|lower) }}
-            {% else %}
+            {% if user.locked %}
                 {{ macro.row('user.status'|trans, 'user.locked'|trans|lower) }}
+            {% else %}
+                {{ macro.row('user.status'|trans, user.disabled ? 'user.disabled'|trans|lower : 'user.enabled'|trans|lower) }}
             {% endif %}
             {{ macro.row('security.authentication'|trans, user.authenticationSource) }}
         </fieldset>
