--- a/app/Resources/views/admin/users/dlg_user.html.twig
+++ b/app/Resources/views/admin/users/dlg_user.html.twig
@@ -11,9 +11,9 @@
         {{ form_row(form.password) }}
         {{ form_row(form.confirmation) }}
         {% endif %}
-        {{ form_row(form.locale) }}
-        {{ form_row(form.theme) }}
-        {{ form_row(form.timezone) }}
+        {{ form_row(form.settings.locale) }}
+        {{ form_row(form.settings.theme) }}
+        {{ form_row(form.settings.timezone) }}
         {{ form_row(form.admin) }}
         {{ form_row(form.disabled) }}
     </fieldset>
