--- a/app/Resources/views/admin/fields/view.html.twig
+++ b/app/Resources/views/admin/fields/view.html.twig
@@ -1,5 +1,6 @@
 <div class="tabs" id="tabs-field" data-tab="{{ tab }}">
     <ul>
         <li><a href="{{ path('admin_tab_field_details', {'id': field.id}) }}">{{ 'field'|trans }}</a></li>
+        <li><a href="{{ path('admin_tab_field_permissions', {'id': field.id}) }}">{{ 'permissions'|trans }}</a></li>
     </ul>
 </div>
