--- a/app/Resources/views/admin/projects/index.html.twig
+++ b/app/Resources/views/admin/projects/index.html.twig
@@ -48,5 +48,6 @@
     <script src="{{ asset('js/admin/templates.js') }}"></script>
     <script src="{{ asset('js/admin/states.js')    }}"></script>
     <script src="{{ asset('js/admin/fields.js')    }}"></script>
+    <script src="{{ asset('js/admin/listitems.js') }}"></script>
 
 {% endblock %}
