--- a/app/Resources/public/css/humanity/jquery-ui.theme.css
+++ b/app/Resources/public/css/humanity/jquery-ui.theme.css
@@ -8,7 +8,7 @@
  *
  * http://api.jqueryui.com/category/theming/
  *
- * To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Verdana%2C%20Geneva%2C%20sans-serif&fwDefault=normal&fsDefault=1em&cornerRadius=4px&bgColorHeader=%23cb842e&bgTextureHeader=glass&bgImgOpacityHeader=25&borderColorHeader=%23d49768&fcHeader=%23ffffff&iconColorHeader=%23ffffff&bgColorContent=%23f4f0ec&bgTextureContent=flat&bgImgOpacityContent=100&borderColorContent=%23e0cfc2&fcContent=%231e1b1d&iconColorContent=%23c47a23&bgColorDefault=%23ede4d4&bgTextureDefault=glass&bgImgOpacityDefault=70&borderColorDefault=%23cdc3b7&fcDefault=%233f3731&iconColorDefault=%23f08000&bgColorHover=%23f5f0e5&bgTextureHover=glass&bgImgOpacityHover=100&borderColorHover=%23f5ad66&fcHover=%23a46313&iconColorHover=%23f08000&bgColorActive=%23f4f0ec&bgTextureActive=highlight_hard&bgImgOpacityActive=100&borderColorActive=%23e0cfc2&fcActive=%23b85700&iconColorActive=%23f35f07&bgColorHighlight=%23f5f5b5&bgTextureHighlight=highlight_hard&bgImgOpacityHighlight=75&borderColorHighlight=%23d9bb73&fcHighlight=%23060200&iconColorHighlight=%23cb672b&bgColorError=%23fee4bd&bgTextureError=highlight_hard&bgImgOpacityError=65&borderColorError=%23f8893f&fcError=%23592003&iconColorError=%23ff7519&bgColorOverlay=%23aaaaaa&bgTextureOverlay=flat&bgImgOpacityOverlay=75&opacityOverlay=30&bgColorShadow=%23aaaaaa&bgTextureShadow=flat&bgImgOpacityShadow=75&opacityShadow=30&thicknessShadow=8px&offsetTopShadow=-8px&offsetLeftShadow=-8px&cornerRadiusShadow=4px&ctl=themeroller
+ * To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Verdana%2C%20Geneva%2C%20sans-serif&fsDefault=1em&fwDefault=normal&cornerRadius=4px&bgColorHeader=%23cb842e&bgTextureHeader=glass&borderColorHeader=%23d49768&fcHeader=%23ffffff&iconColorHeader=%23ffffff&bgColorContent=%23f4f0ec&bgTextureContent=flat&borderColorContent=%23e0cfc2&fcContent=%231e1b1d&iconColorContent=%23c47a23&bgColorDefault=%23ede4d4&bgTextureDefault=glass&borderColorDefault=%23cdc3b7&fcDefault=%233f3731&iconColorDefault=%23f08000&bgColorHover=%23f5f0e5&bgTextureHover=glass&borderColorHover=%23f5ad66&fcHover=%23a46313&iconColorHover=%23f08000&bgColorActive=%23f4f0ec&bgTextureActive=highlight_hard&borderColorActive=%23e0cfc2&fcActive=%23b85700&iconColorActive=%23f35f07&bgColorHighlight=%23f5f5b5&bgTextureHighlight=highlight_hard&borderColorHighlight=%23d9bb73&fcHighlight=%23060200&iconColorHighlight=%23cb672b&bgColorError=%23fee4bd&bgTextureError=highlight_hard&borderColorError=%23f8893f&fcError=%23592003&iconColorError=%23ff7519&bgColorOverlay=%23aaaaaa&bgTextureOverlay=flat&bgImgOpacityOverlay=75&opacityOverlay=30&bgColorShadow=%23aaaaaa&bgTextureShadow=flat&bgImgOpacityShadow=75&opacityShadow=30&thicknessShadow=8px&offsetTopShadow=-8px&offsetLeftShadow=-8px&cornerRadiusShadow=4px&bgImgOpacityHeader=25&bgImgOpacityContent=100&bgImgOpacityDefault=70&bgImgOpacityHover=100&bgImgOpacityActive=100&bgImgOpacityHighlight=75&bgImgOpacityError=65&ctl=themeroller
  */
 
 
@@ -30,7 +30,7 @@
 }
 .ui-widget-content {
 	border: 1px solid #e0cfc2;
-	background: #f4f0ec url("images/ui-bg_flat_100_f4f0ec_40x100.png") 50% 50% repeat-x;
+	background: #f4f0ec;
 	color: #1e1b1d;
 }
 .ui-widget-content a {
@@ -396,14 +396,14 @@
 
 /* Overlays */
 .ui-widget-overlay {
-	background: #aaaaaa url("images/ui-bg_flat_75_aaaaaa_40x100.png") 50% 50% repeat-x;
+	background: #aaaaaa;
 	opacity: .3;
 	filter: Alpha(Opacity=30); /* support: IE8 */
 }
 .ui-widget-shadow {
 	margin: -8px 0 0 -8px;
 	padding: 8px;
-	background: #aaaaaa url("images/ui-bg_flat_75_aaaaaa_40x100.png") 50% 50% repeat-x;
+	background: #aaaaaa;
 	opacity: .3;
 	filter: Alpha(Opacity=30); /* support: IE8 */
 	border-radius: 4px;
