--- a/app/Resources/public/less/etraxis-panel.less
+++ b/app/Resources/public/less/etraxis-panel.less
@@ -40,13 +40,13 @@
             }
         }
 
-        .ui-icon {
+        .ui-icon-none, .ui-icon-check {
             float: left;
             margin-right: 4px;
+        }
 
-            &.ui-icon-none {
-                background-image: none;
-            }
+        .ui-icon-none {
+            background-image: none;
         }
 
         .panel-item {
