Replace "Localizer" service with "Intl" Twig extension

--- a/app/Resources/views/admin/projects/tab_details.html.twig
+++ b/app/Resources/views/admin/projects/tab_details.html.twig
@@ -13,7 +13,7 @@
     <div class="grid-100">
         <fieldset>
             {{ macro.row('project.name'|trans, project.name) }}
-            {{ macro.row('project.start_time'|trans, project.createdAt|date('Y-m-d')) }}
+            {{ macro.row('project.start_time'|trans, project.createdAt|localizeddate('long', 'none', app.user.locale, app.user.timezone)) }}
             {{ macro.row('project.status'|trans, project.suspended ? 'project.suspended'|trans|lower : 'project.active'|trans|lower) }}
             {{ macro.row('description'|trans, project.description) }}
         </fieldset>
