--- a/app/Resources/public/less/etraxis-datatables.less
+++ b/app/Resources/public/less/etraxis-datatables.less
@@ -7,6 +7,13 @@ table.dataTable {
         margin: 0;
     }
 
+    tbody {
+
+        td {
+            padding: 6px 8px;
+        }
+    }
+
     tfoot {
 
         display: table-row-group;
@@ -23,7 +30,7 @@ table.dataTable {
             }
 
             input[type="checkbox"] {
-                margin: 0 7px;
+                margin: 0 5px;
             }
         }
 
