Symfony deprecation notice: using "replace" with character by character replacement is deprecated since version 1.22 and will be removed in Twig 2.0

--- a/app/Resources/views/admin/fields/tab_permissions.html.twig
+++ b/app/Resources/views/admin/fields/tab_permissions.html.twig
@@ -36,8 +36,8 @@
             <legend>{{ 'permissions'|trans }}</legend>
             {% for key, value in permissions %}
                 <div class="grid-100">
-                    <input type="radio" id="{{ value|replace('.', '_') }}" name="permission" value="{{ key }}">
-                    <label for="{{ value|replace('.', '_') }}">{{ value|trans|lower }}</label>
+                    <input type="radio" id="{{ value|replace({'.': '_'}) }}" name="permission" value="{{ key }}">
+                    <label for="{{ value|replace({'.': '_'}) }}">{{ value|trans|lower }}</label>
                 </div>
             {% endfor %}
         </fieldset>
