--- a/app/Resources/views/admin/states/view.html.twig
+++ b/app/Resources/views/admin/states/view.html.twig
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="{{ path('admin_tab_state_details', {'id': state.id}) }}">{{ 'state'|trans }}</a></li>
 
-        {% if (state.type != constant('eTraxis\\Dictionary\\StateType::FINAL')) %}
+        {% if (state.type != constant('eTraxis\\Dictionary\\StateType::IS_FINAL')) %}
             <li><a href="{{ path('admin_tab_state_transitions', {'id': state.id}) }}">{{ 'state.transitions'|trans }}</a></li>
         {% endif %}
 
