--- a/app/Resources/public/less/etraxis-datatables.less
+++ b/app/Resources/public/less/etraxis-datatables.less
@@ -7,7 +7,10 @@ table.dataTable {
         margin: 0;
     }
 
-    tbody {
+    tbody tr {
+        &.unread {
+            font-weight: bold;
+        }
 
         td {
             padding: 6px 8px;
