--- a/app/Resources/views/web/settings/index.html.twig
+++ b/app/Resources/views/web/settings/index.html.twig
@@ -7,7 +7,7 @@
 
     <div class="grid-row">
 
-        <div class="grid-50 mobile-grid-100 mobile-grid-row">
+        <div class="grid-50 mobile-grid-100">
             {{ form_start(appearance_form) }}
             <fieldset>
                 <legend>{{ 'appearance'|trans }}</legend>
@@ -28,7 +28,7 @@
 
         {% if not app.user.isExternalAccount %}
 
-        <div class="grid-50 mobile-grid-100 mobile-grid-row">
+        <div class="grid-50 mobile-grid-100">
             {{ form_start(password_form) }}
             <fieldset>
                 <legend>{{ 'user.password'|trans }}</legend>
