--- a/app/Resources/public/less/etraxis-datatables.less
+++ b/app/Resources/public/less/etraxis-datatables.less
@@ -14,6 +14,10 @@ table.dataTable {
 
         td {
             padding: 6px 8px;
+
+            &.nowrap {
+                white-space: nowrap;
+            }
         }
     }
 
