View record (comments)

--- a/app/Resources/public/less/themes/theme-allblacks.less
+++ b/app/Resources/public/less/themes/theme-allblacks.less
@@ -46,6 +46,16 @@ a {
     color: #ff6247;
 }
 
+/* Input controls */
+
+fieldset.private {
+    border-color: #ff6247;
+
+    legend {
+        color: #ff6247;
+    }
+}
+
 /* DataTables */
 
 table.dataTable {
