--- a/app/Resources/views/web/records/tab_details.html.twig
+++ b/app/Resources/views/web/records/tab_details.html.twig
@@ -21,6 +21,7 @@
         {% include 'web/records/_states.html.twig' with { 'record': record } %}
     </div>
     <div class="grid-50 mobile-grid-100">
+        {% include 'web/records/_comments.html.twig' with { 'record': record } %}
     </div>
 </div>
 
