--- a/app/Resources/public/less/themes/theme-nexada.less
+++ b/app/Resources/public/less/themes/theme-nexada.less
@@ -25,6 +25,16 @@ a {
     color: #00638f;
 }
 
+/* Input controls */
+
+fieldset.private {
+    border-color: #dc322f;
+
+    legend {
+        color: #dc322f;
+    }
+}
+
 /* DataTables */
 
 table.dataTable {
